# python_client

./: .gitignore  README.md  pyproject.toml
snippets/src/: config.py  main.py
snippets/tests/: client.py  conftest.py  fakes.py  pytest.ini  test_10_client.py  test_1_client.py  test_20_simple_examples.py  test_2_simple_examples.py  test_30_plan_management.py  test_3_plan_management.py  test_40_subscription_management.py  test_40_subscription_management_create.py  test_41_subscription_management_retrieve.py  test_42_subscription_management_update.py  test_43_subscription_management_delete.py  test_50_webhook_management.py
subgate/: __init__.py
subgate/client/: base_client.py  plan_client.py  subgate_client.py  subscription_client.py  webhook_client.py
subgate/domain/: cycle.py  plan.py  subscription.py  usage.py  webhook.py
subgate/services/: deserializers.py  serializers.py  validators.py
subgate_client/: __init__.py
subgate_client/client/: base_client.py  plan_client.py  subgate_client.py  subscription_client.py  webhook_client.py
subgate_client/domain/: cycle.py  enums.py  events.py  plan.py  subscription.py  usage.py  webhook.py
subgate_client/services/: deserializers.py  serializers.py  validators.py
subgatekit/: __init__.py  entities.py  enums.py  events.py  factories.py  item_manager.py  utils.py  validators.py
tests/: conftest.py  fakes.py  t_events.py  test_errors.py  test_events.py  test_plan.py  test_plan_client.py  test_subscription.py  test_subscription_client.py  test_validators.py  test_webhook.py  test_webhook_client.py
(+45 files in other folders)
